--- a/contacto.html
+++ b/contacto.html
@@ -6,12 +6,13 @@ email: itnas06@gmail.com
 ---
 <section id="contacto">
 	<div class="data">
-		<h1 class="contact tel">(+34) 695 642 851</h1>
-		<h1 class="contact mail">info@psiconueve.es</h1>
+		<h1 class="contact tel">Si llamas en horario de mañana: 670 064 084</h1>
+		<h1 class="contact tel">Si llamas en horario de tarde: 691 023 777</h1>
+		<h1 class="contact mail">psiconueve@gmail.com</h1>
 	</div>
 	<div id="map"></div>
 </section>
-<section id="formularios">
+<!--section id="formularios">
 	<form id="formulario-contactar" method="POST">
 		<div class="tooltip-wrapper">
 			<p>
@@ -79,4 +80,4 @@ email: itnas06@gmail.com
 			<input id="consultar" type="submit" value="Consultar"/>
 		</div>
 	</form>
-</section>
+</section-->
